# MCPForge

./: .dockerignore  .env-sample  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
app/: __init__.py  config.py  dependencies.py  main.py
app/routers/: __init__.py  example.py
app/utils/: log.py
docs/: index.md
migrations/: README  env.py  script.py.mako
scripts/: format.sh  lint.sh  test.sh
tests/: conftest.py  test_example.py
